--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 	
 
 	// Uncomment the next line to run commands after the container is created.
-	"postCreateCommand": "cd /workspaces/backstage-workshop && printf \"backstage\n\" | npx @backstage/create-app@latest"
+	"postCreateCommand": "cd /workspaces/backstage-workshop && printf \"backstage\n\" | npx @backstage/create-app@latest && cd backstage && yq eval '.app.baseUrl = \"http://0.0.0.0:3000\" | .backend.listen.host = \"0.0.0.0\"' -i app-config.yaml"
 
 	// Configure tool-specific properties.
 	// "customizations": {},
